# ComfyUI_Wan22Blockswap

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  __init__.py  block_manager.py  callbacks.py  config.py  looper_helpers.py  nodes.py  pyproject.toml  real_block_swap_performance_results.json  utils.py  wan_loader.py
.github/workflows/: publish.yml
js/: wan22blockswap_ui.js
test_scripts/: test_blockswap_looper.py  test_looper_integration.py  test_performance.py  test_real_performance.py  validate_implementation.py
